[mgnt] Boilerplate routes & pages for all proposed sections

--- a/mgnt-console/src/app/frontend/public/index.html
+++ b/mgnt-console/src/app/frontend/public/index.html
@@ -17,7 +17,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>CoreUI - Open Source Bootstrap Admin Template</title>
+    <title>Project Wyze - Management Console</title>
 
     <!-- Icons -->
     <link href="%PUBLIC_URL%/css/font-awesome.min.css" rel="stylesheet">
